@@ -162,17 +162,6 @@ Boston, MA 02110-1301 USA.
     padding: 2px 6px;
 }
 
-.wato table.auditlog.pending td {
-    border-color: #f80;
-}
-.wato table.auditlog.pending tr.even0 {
-    background-color: #fda;
-}
-
-.wato table.auditlog.pending tr.odd0 {
-    background-color: #fc8;
-}
-
 .wato td.dns {
     color: #666;
 }
@@ -477,6 +466,8 @@ table.validationerror img {
 /* Controls for the audit log paged mechanism */
 .wato div.paged_controls {
     float: right;
+    position: relative;
+    top: 3px;
 }
 
 /* Special styles for configuration and rule editor */
